styleSheet_template.css
/* ... */
dl.reflist dd p::before {
    font-size: 85%;
    content: "\25B6\00A0\00A0";
    display: inline-block;
}

.paramkey {
    text-align: right;
}

.paramtype {
    font-family: monospace;
    white-space: nowrap;
    color: var(--secondary-color-dark);
}

.paramname {
    color: black;
    font-family: monospace;
    white-space: nowrap;
}
.paramname em {
    color: var(--primary-color-light);
    font-style: normal;
}
.paramname code {
    color: #404040;
    line-height: 14px;
}

.params, .retval, .exception, .tparams {
    margin-left: 0;
    padding-left: 0;
    margin-bottom: -0.25em;
}       

.params dt, .tparams dt {
    margin-bottom: 0.5em;
}

.params .paramname, .tparams .paramname, .retval .paramname {
    color: var(--primary-color-light);
    font-family: monospace;
    font-weight: bold;
    vertical-align: top;
}

.params .paramtype, .tparams .paramtype {
    font-family: monospace;
    font-style: italic;
    vertical-align: top;
}       
        
.params .paramdir, .tparams .paramdir {
    font-family: "courier new",courier,monospace;
    vertical-align: top;
}

/* line over parameters docs */
.params, .tparams {
    border-collapse: collapse;
}

.params tr, .tparams tr {
    -moz-box-shadow: 0 -2px 0 -1px #606060;
    -webkit-box-shadow: 0 -2px 0 -1px #606060;
    -o-box-shadow: 0 -2px 0 -1px #606060;
    box-shadow: 0 -2px 0 -1px #606060;
}

.params .paramname, .tparams .paramname {
    border-top: 2px solid var(--primary-color);
    padding-right: 5pt;
}

.params td, .tparams td {
    padding-bottom: 1em;
}

table.mlabels {
	border-spacing: 0px;
}

td.mlabels-left {
	width: 100%;
	padding: 0px;
}

td.mlabels-right {
	vertical-align: bottom;
	padding: 0px;
	white-space: nowrap;
}

span.mlabels {
        margin-left: 8px;
}

span.mlabel {
    background-color: #444444;
    border: none;
    border-radius: 3px;
    text-shadow: none;
    color: white;
    margin-right: 4px;
    padding: 3px 5px;
    font-size: 8pt;
    white-space: nowrap;
    vertical-align: middle;
}

.memdoc .definition {
    position: relative;
    padding-top: 0.5em;
    
    /* move definition line to bottom of memdoc */
    -webkit-box-ordinal-group: 2;
    -moz-box-ordinal-group: 2;
    box-ordinal-group: 2;
}

.memdoc .definition::before {
    content: "";
    width: 33%;
    height: 1px;
    border-top: 1px solid black;
    position: absolute;
    top: 0;
}

/* @end */

/* these are for tree view inside a (index) page */

div.directory {
    margin: 10px 0px;
    border-top: 1px solid #9CAFD4;
    border-bottom: 1px solid #9CAFD4;
    width: 100%;
}

.directory table {
    border-collapse:collapse;
}

.directory td {
    margin: 0px;
    padding: 0px;
    vertical-align: top;
}

.directory td.entry {
    white-space: nowrap;
    padding-right: 6px;
    padding-top: 3px;
}

.directory td.entry a {
    outline:none;
}

.directory td.entry a img {
    border: none;
}

.directory td.desc {
    width: 100%;
    padding-left: 6px;
    padding-right: 6px;
    padding-top: 3px;
    border-left: 1px solid rgba(0,0,0,0.05);
}

table.directory {
    font: 400 14px Roboto,sans-serif;
}

.directory tr.even {
    padding-left: 0;
    background-color: #f6f6f6;
}

.directory img {
    vertical-align: -30%;
}

.directory .levels {
    white-space: nowrap;
    width: 100%;
    text-align: right;
    font-size: 9pt;
}

.directory .levels span {
    cursor: pointer;
    padding-left: 2px;
    padding-right: 2px;
    color: #3D578C;
}

.arrow {
    color: var(--primary-color);
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: pointer;
    font-size: 80%;
    display: inline-block;
    width: 16px;
    height: 22px;
    margin-left: 4px;
}

.arrow:hover {
    color: black;
}

#selected .arrow {
    color: white;
}

#selected .arrow:hover {
    color: #d2d2d2;
}

#nav-tree {
    background-image: none;
    background-color: white;
}

#nav-tree .item {
    margin: 0;
}

#nav-tree a {
    color: black;
}

#nav-tree .item:hover {
    background-color: #d2d2d2;
}

#nav-tree .selected {
    background-image: none;
    background-color: var(--primary-color);
    color: white;
    text-shadow: none;
}

#nav-tree .selected:hover {
    background-image: none;
    background-color: var(--primary-color);
    color: white;
    text-shadow: none;
}

.ui-resizable-e {
    background: #808080 url("splitbar_handle.svg") no-repeat center;
    border-right: solid 1px #c0c0c0;
    border-left: solid 1px black;
}

.ui-resizable-e:hover {
    background-color: #606060;
}

.icon {
    font-family: Arial, Helvetica;
    font-weight: bold;
    font-size: 12px;
    height: 14px;
    width: 16px;
    display: inline-block;
    background-color: #728DC1;
    color: white;
    text-align: center;
    border-radius: 4px;
    margin-left: 2px;
    margin-right: 2px;
}

.icona {
    width: 24px;
    height: 22px;
    display: inline-block;
}

.iconfopen {
    width: 24px;
    height: 18px;
    margin-bottom: 4px;
    background-image:url('folderopen.png');
    background-position: 0px -4px;
    background-repeat: repeat-y;
    vertical-align:top;
    display: inline-block;
}

.iconfclosed {
    width: 24px;
    height: 18px;
    margin-bottom: 4px;
    background-image:url('folderclosed.png');
    background-position: 0px -4px;
    background-repeat: repeat-y;
    vertical-align:top;
    display: inline-block;
}

.icondoc {
    width: 24px;
    height: 18px;
    margin-bottom: 4px;
    background-image:url('doc.png');
    background-position: 0px -4px;
    background-repeat: repeat-y;
    vertical-align:top;
    display: inline-block;
}

/* @end */

div.dynheader {
    margin-top: 8px;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

address {
    font-style: normal;
    color: #2A3D61;
}
/* ... */

